Fix style flicker and add spinner

--- a/app/front/src/app/component/dashboard-page/dashboard-page.component.scss
+++ b/app/front/src/app/component/dashboard-page/dashboard-page.component.scss
@@ -1,9 +1,10 @@
 @import "~src/variables.scss";
 
+
 :host {
   display: block;
   width: 100%;
-  height: 100%;
+  min-height: calc(100vh - #{$app-top-navbar-height});
   background-color: $color-background-gray;
 }
 
@@ -12,5 +13,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   padding: 35px 75px 65px;
 }
