--- a/app/front/src/app/component/manage-dashboard-base/manage-dashboard-base.component.scss
+++ b/app/front/src/app/component/manage-dashboard-base/manage-dashboard-base.component.scss
@@ -1,10 +1,22 @@
 @import "~src/variables.scss";
 
+:host {
+  width: 100%;
+  height: 100%;
+}
+
 .manage-dashboard-base-container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  app-loading-progress-spinner {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   section {
     margin-bottom: 50px;
@@ -47,7 +59,7 @@
     color: $color-on-background-gray-light;
     font-size: 12.5px;
     text-align: right;
-    margin-bottom: 65px;
+    margin-bottom: 50px;
   }
 
   .directory-section, .document-section, .started-section {
